lab3/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend-replicaset
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: frontend
  type: NodePort
