lab3/lab3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lab3
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: secretdomainlocal.test
    http:
      paths:
      - backend:
          service:
            name: frontend-replicaset
            port:
              number: 3000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - secretdomainlocal.test
    secretName: tls-secret
status:
  loadBalancer: {}
